# AIGenReport

./: .gitignore  README.md  ROADMAP.md  main.py  pyproject.toml
front/react-markdown/report/: package-lock.json  package.json
front/react-markdown/report/src/: App.js  UniversitySelectionReport.md
normalization/: primary_keys.extended.11871.json
prompts/: KnowledgeBase.md  Normalization.md  ReportGenerator.md
university_selection_report/: README.md  StudentProfile.txt  langserve_app.py  start_langserve.py  university_selection_workflow.py
university_selection_report/front/react-markdown/report/src/: UniversitySelectionReport.md
